manifest/objects/SBQQ__Quote__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteHelp</customHelpPage>
    <description>Sales quote for a given opportunity. There may be multiple quotes for a single opportunity.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>SBQQ__Opportunity2__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Flat_Fee_Recurring_Revenue__c</fullName>
        <label>Annual Flat Fee Recurring Revenue</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>equals</operation>
            <value>Fixed Price</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_BD_1000_lives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For approval EMS core bundle less than 1000 lives in direct or broker or cross-sell cpq pricebooks.</description>
        <label>Approval - BD &lt; 1000 lives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_BD_Consult_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval - BH Consult Type different to GM option</description>
        <label>Deprecated - Approval - BH Consult Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_BD_Standalone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval required checkbox for EMS standalone non-standard sales.</description>
        <inlineHelpText>Approval required heckbox for EMS standalone non-standard sales.</inlineHelpText>
        <label>Deprecated - Approval - BD Standalone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_BH_with_PL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for approval when BH products are sold without Platform License(PL) products.</description>
        <label>Approval - BH with PL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Case_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated - Approval Case Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Custom_Consult_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - Custom Consult Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_DedicatedPhone_200K__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dedicated Phone Line &lt; 200K lives requires approval</description>
        <inlineHelpText>Dedicated Phone Line &lt; 200K lives requires approval</inlineHelpText>
        <label>Approval DedicatedPhone &lt; 200K Lives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Direct_Broker_Included_2499__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprec-Approval-Dir/Broker Incl&gt;9999</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_EMS_Standard_5000_lives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For approval EMS Standard Consult type less than 5000 lives in direct or broker or cross-sell cpq pricebooks.</description>
        <inlineHelpText>Approval required for EMS Standard product for less than 5000 lives</inlineHelpText>
        <label>Approval - EMS Standard &lt; 5000 lives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_First_Consult_Free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated- Approval-First Consult Free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Free_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated - Approval - Free Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GLOBALCARE_3000_lives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - GLOBALCARE &lt; 3000 lives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GM_BH_HY_Zero_Net_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - GM/BH/HY Zero Net Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GM_HY_Broker_Direct_U_Cap_0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprec-Approval-GM/HY Broker/Dir UCap=0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GM_HY_Util_Cap_Changed_or_0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - GM/HY Util Cap Changed or 0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GM_Included_w_Other_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - GM Included w/ Other Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GM_Missing_w_Other_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - GM Missing w/Other Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GM_More_than_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - GM More than 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GM_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - GM Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_GlobalCare_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Flab when GlobalCare consult type is Included.</description>
        <label>Approval GlobalCare Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_HY_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - HY Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_HY_with_Anything__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - HY with Anything</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_LandingPage_1M_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Flag for Landing Page Product for Quote less than in 1M Revenue</description>
        <label>Approval - LandingPage 1M Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Line_Discounted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - Line Discounted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Milestone_Based_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - Milestone Based Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_N__c</fullName>
        <formula>IF(TEXT(SBQQ__Status__c) == &quot;Approved&quot;,
   IMAGE(&quot;/img/msg_icons/confirm24.png&quot;,&quot;OK&quot;, 24, 24) &amp; &quot; OK&quot;,
   IF( AND(NOT(ISBLANK( Approvals__c)), AND(TEXT(SBQQ__Status__c) &lt;&gt; &quot;Approved&quot;, TEXT(SBQQ__Status__c) &lt;&gt; &quot;Rejected&quot;)),
     IMAGE(&quot;/img/msg_icons/warning24.png&quot;,&quot;Requires Approval&quot;, 24, 24) &amp; &quot; Requires Approval&quot;,
     IF(TEXT(SBQQ__Status__c) == &quot;Rejected&quot;,
       IMAGE(&quot;/img/msg_icons/error24.png&quot;,&quot;Rejected&quot;, 24, 24) &amp; &quot; Rejected&quot;,
       IMAGE(&quot;/img/msg_icons/confirm24.png&quot;,&quot;OK&quot;, 24, 24) &amp; &quot; OK&quot;
      )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_No_Carrier_price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval when the price in the quote line is not in Carrier pricebook.</description>
        <inlineHelpText>Approval when the price in the quote line is not in Carrier pricebook.</inlineHelpText>
        <label>Approval - No Carrier price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_PRIM360_10000_lives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For approval Primary Care 360 less than 2500 lives in direct cpq pricebooks.</description>
        <inlineHelpText>For approval Primary Care 360 less than 2500 lives in direct cpq pricebooks.</inlineHelpText>
        <label>Approval - PRIM360 &lt; 2500 lives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_PRIM360_Fee_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval PRIM360 Fee Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Provider_Based_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Provider Based Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Quote_Discounted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - Quote Discounted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_SPS_20k_lives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated - Approval SPS price 0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_SPS_60k_lives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval SPS &gt; 60k lives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Software_Development_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval - Software Development Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_TIMAP_5000_lives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval TIMAP 5000 lives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approvals__c</fullName>
        <description>Display text for approval message on Edit Lines and Quote.  BR below is carriage return</description>
        <formula>IF(Approval_Custom_Consult_Fees__c, &apos;Custom Consult Fees&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_Direct_Broker_Included_2499__c, TEXT(CPQ_Pricebook__c) &amp; &apos; Consults Included and Lives &gt; 9999&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_Free_Trial__c, &apos;Free Trial Period&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GM_BH_HY_Zero_Net_Price__c, &apos;GM, BH, HY or BD Zero Net Price&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GM_HY_Broker_Direct_U_Cap_0__c, TEXT(CPQ_Pricebook__c) &amp; &apos; &apos; &amp; &apos; GM or HY Initial Utilization Cap is Zero&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GM_HY_Util_Cap_Changed_or_0__c, &apos; GM or HY Initial Utilization Cap is Zero or Changed from Default&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GM_Included_w_Other_Products__c, &apos;GM Consults Included with Other Products&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GM_Missing_w_Other_Products__c, &apos;Invalid Standalone Product&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GM_More_than_1__c, &apos;There is More than One GM Listed in Quote Lines&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_HY_Standard__c, &apos;HY has a Standard Consult Fee&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_HY_with_Anything__c, &apos;HY with Invalid Products&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_Line_Discounted__c, &apos;Line Level Discount&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_Quote_Discounted__c, &apos;Quote Level Discount&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_First_Consult_Free__c, &apos;First Consult Free&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_BD_Standalone__c, &apos;Best Doctors Standalone or Invalid Combo&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_Software_Development_Kit__c, &apos;Marketing Product – SDK&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_BD_1000_lives__c, &apos;BD optional product &lt; 1000 lives&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_EMS_Standard_5000_lives__c, &apos;EMS Standard &lt; 5000 lives&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_BD_Consult_Type__c , &apos;BH consult type different from GM or HY&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_No_Carrier_price__c, &apos;No price for product in the Carrier pricebook&apos; &amp; BR(), &apos;&apos;) &amp;
IF( Approval_BH_with_PL__c, &apos;Behavioral Health Care Standalone or Invalid Combo&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GLOBALCARE_3000_lives__c , &apos;Global Care optional product &lt; 3000 lives&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GlobalCare_Included__c, &apos;Global Care Consult Type Included&apos; &amp; BR(), &apos;&apos;) &amp;
IF(Approval_GM_Standard__c, &apos;GM has a Standard Consult Fee&apos;&amp; BR(), &apos;&apos;)&amp;
IF( Approval_SPS_20k_lives__c , &apos;SPS has a 0 fee&apos; &amp; BR(), &apos;&apos;)&amp;
IF( Approval_SPS_60k_lives__c , &apos;SPS optional product &gt; 60K lives&apos; &amp; BR(), &apos;&apos;)&amp;
IF( Approval_DedicatedPhone_200K__c , &apos;Dedicated Phone 200K Lives or Less&apos; &amp; BR(), &apos;&apos;)&amp;
IF( Approval_Case_Rate__c , &apos;Case Rate changed from default&apos; &amp; BR(), &apos;&apos;)&amp;
IF( Approval_TIMAP_5000_lives__c, &apos;TIMAP &lt; 5000 lives&apos; &amp; BR(), &apos;&apos;)&amp;
IF(Approval_PRIM360_10000_lives__c, &apos;PRIMARY CARE &lt; 1000 lives&apos; &amp; BR(), &apos;&apos;)&amp;
IF(Approval_PRIM360_Fee_Type__c, &apos;PRIMARY CARE Fee Type&apos; &amp; BR(), &apos;&apos;)&amp;
IF(Approval_Milestone_Based_Pricing__c, &apos;Milestone Based Pricing&apos; &amp; BR(), &apos;&apos;)&amp;
IF(Approval_Provider_Based_Care__c, &apos;Provider Based Care with Invalid Products&apos; &amp; BR(), &apos;&apos;)&amp;
IF(Approval_LandingPage_1M_Revenue__c, &apos;Net Annual Revenue &lt; $1,000,000.00&apos; &amp; BR(), &apos;&apos;)</formula>
        <inlineHelpText>Display text for approval message on Edit Lines and Quote.  BR below is carriage return</inlineHelpText>
        <label>Approvals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approvals_for_templates_2__c</fullName>
        <formula>IF(Approval_Custom_Consult_Fees__c, 
   &apos;Custom Consult Fees; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_Direct_Broker_Included_2499__c, 
   TEXT(CPQ_Pricebook__c) &amp; &apos; Consults Included and Lives &gt; 9999; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_Free_Trial__c, 
   &apos;Free Trial Period; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_GM_BH_HY_Zero_Net_Price__c, 
   &apos;GM, BH, HY or BD Zero Net Price; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_GM_HY_Broker_Direct_U_Cap_0__c, 
   TEXT(CPQ_Pricebook__c) &amp; &apos; &apos; &amp; &apos; GM or HY Initial Utilization Cap is Zero; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_GM_HY_Util_Cap_Changed_or_0__c, 
   &apos; GM or HY Initial Utilization Cap is Zero or Changed from Default; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_GM_Included_w_Other_Products__c, 
   &apos;GM Consults Included with Other Products; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_GM_Missing_w_Other_Products__c, 
   &apos;GM is Missing with Other Products; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_GM_More_than_1__c,
   &apos;There is More than One GM Listed in Quote Lines; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_HY_Standard__c, 
   &apos;HY has a Standard Consult Fee; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_HY_with_Anything__c, 
   &apos;HY with Invalid Products; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_Line_Discounted__c, 
   &apos;Line Level Discount; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_Quote_Discounted__c, 
   &apos;Quote Level Discount; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_First_Consult_Free__c,  
   &apos;First Consult Free; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_BD_Standalone__c, 
   &apos;Best Doctors Standalone or Invalid Combo; &apos;, 
   &apos;&apos;) &amp;
IF(Approval_Software_Development_Kit__c,  
   &apos;Software Development Kit; &apos;, 
   &apos;&apos;) &amp;
IF( Approval_BD_1000_lives__c, 
   &apos;Less than 1000 lives for BD - Core Bundle; &apos;, 
   &apos;&apos;) &amp;
IF(  Approval_BD_Consult_Type__c  , 
   &apos;BH consult type different from GM or HY; &apos;, 
   &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approvals (for templates 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approvals_for_templates__c</fullName>
        <description>It&apos;s use for approval email templates (Full by workflow rule)</description>
        <label>Approvals (for templates)</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BD_Product_Count__c</fullName>
        <label>BD Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Region__c</fullName>
        <label>Business Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_Pricebook_Formula__c</fullName>
        <formula>TEXT(CPQ_Pricebook__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ Pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Pricebook__c</fullName>
        <label>CPQ Pricebook</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sales_Channels__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>CPQ_Pricebooks</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_Pricebook_for_Filter__c</fullName>
        <description>Field is used in the CPQ Search filter</description>
        <formula>IF( TEXT(CPQ_Pricebook__c) = &apos;Canada Direct&apos;, &apos;Canada&apos;, TEXT(CPQ_Pricebook__c))</formula>
        <label>CPQ Pricebook for Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>Added new Picklist values</description>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CPQ_Pricebook__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Rate__c</fullName>
        <description>This field is used in price rules to calculate the quantity on quote lines based on different channels</description>
        <label>Channel Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel_Rate</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consults_Included_Count__c</fullName>
        <description>This field rolls up the GM and/or HY Consults Included Products using the flag from the Quote Line Items. READ ONLY.</description>
        <inlineHelpText>This field rolls up the GM and/or HY Consults Included Products using the flag from the Quote Line Items. READ ONLY.</inlineHelpText>
        <label>Consults Included Count</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.GenMed_Consult_Included_Flag__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_CV__c</fullName>
        <description>Count of Linvongo CV Products on the Quotes</description>
        <label>Count CV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_DIABCC__c</fullName>
        <label>Count DIABCC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_DM__c</fullName>
        <description>Count of Linvong Diabetes Management field. The value gets sets by the Summary Variable</description>
        <label>Count DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_DPCC__c</fullName>
        <label>Count DPCC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_DP__c</fullName>
        <description>Count of Livongo DP Product. Summary Variable sets the value</description>
        <label>Count DP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_Custom__c</fullName>
        <description>Count GM - Consult Type = Custom</description>
        <inlineHelpText>Count GM - Consult Type = Custom</inlineHelpText>
        <label>Count GM - CT = Custom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_Included__c</fullName>
        <description>Count GM - Consult Type = Included</description>
        <inlineHelpText>Count GM - Consult Type = Included</inlineHelpText>
        <label>Count GM - CT = Included</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_MFN_Included__c</fullName>
        <description>Count GM - Consult Type = MFN - Included</description>
        <inlineHelpText>Count GM - Consult Type = MFN - Included</inlineHelpText>
        <label>Count GM - CT = MFN - Included</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_MFN_Standard__c</fullName>
        <description>Count GM - Consult Type = MFN - Standard</description>
        <inlineHelpText>Count GM - Consult Type = MFN - Standard</inlineHelpText>
        <label>Count GM - CT = MFN - Standard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_Mercer_WTW_Included__c</fullName>
        <description>Count GM - Consult Type = Mercer/WTW - Included</description>
        <inlineHelpText>Count GM - Consult Type = Mercer/WTW - Included</inlineHelpText>
        <label>Count GM - CT = Mercer/WTW - Included</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_Mercer_WTW_Standard__c</fullName>
        <description>Count GM - Consult Type = Mercer WTW - Standard</description>
        <inlineHelpText>Count GM - Consult Type = Mercer WTW - Standard</inlineHelpText>
        <label>Count GM - CT = Mercer WTW - Standard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_Standard__c</fullName>
        <inlineHelpText>Count GM - Consult Type = Standard</inlineHelpText>
        <label>Count GM - CT = Standard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_Tier_1_Included__c</fullName>
        <description>Count GM - Consult Type = Tier 1 - Included</description>
        <inlineHelpText>Count GM - Consult Type = Tier 1 - Included</inlineHelpText>
        <label>Count GM - CT = Tier 1 - Included</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_GM_CT_Tier_1_Standard__c</fullName>
        <description>Count GM - Consult Type = Tier 1 - Standard</description>
        <inlineHelpText>Count GM - Consult Type = Tier 1 - Standard</inlineHelpText>
        <label>Count GM - CT = Tier 1 - Standard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_HYPTCC__c</fullName>
        <label>Count HYPTCC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Disable_BH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Disable BH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Estimated_Participating__c</fullName>
        <description>Used to set the Default Estimated Participation in Quote Line Editior.. Used in the Price Rule</description>
        <label>Default Estimated Participating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Fee_Type__c</fullName>
        <description>This field is used to set the default Fee type to PPPM on Livongo Products</description>
        <label>Default Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EditLinesFieldSetName__c</fullName>
        <formula>IF(CPQ_Pricebook_Formula__c = &apos;Complex Case Mgmt&apos;, &apos;LineEditorCCM&apos;, IF( BEGINS(CPQ_Pricebook_Formula__c, &apos;Canada&apos;), &apos;LineEditorCanada&apos;, &apos;SBQQ__LineEditor&apos; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EditLinesFieldSetName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>** Back end only ** Do not add to page layouts</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Fee_NetTotal__c</fullName>
        <description>Roll-Up Summary from QuoteLine where Subscrirption Type = Renewable, Subscription Pricing = Fixed Pricing and Subscription Term = 12</description>
        <label>Flat Fee Net Total</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Subscription_Type__c</field>
            <operation>equals</operation>
            <value>Renewable</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionTerm__c</field>
            <operation>equals</operation>
            <value>12</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>equals</operation>
            <value>Fixed Price</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GCRM_Quote_ID__c</fullName>
        <externalId>true</externalId>
        <label>GCRM Quote ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Consult_type__c</fullName>
        <description>It&apos;s the consult type per last GM injected</description>
        <inlineHelpText>It&apos;s the consult type per last GM injected</inlineHelpText>
        <label>GM Consult type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Included_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field displays the CPQ summary variable Count of GM Included which counts products with the combined product code and type = GM Included</description>
        <inlineHelpText>This field displays the CPQ summary variable Count of GM Included which counts products with the combined product code and type = GM Included</inlineHelpText>
        <label>GM Included Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Product_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field displays the CPQ summary variable Count of products on the Quote Line Items with the product code = GM</description>
        <inlineHelpText>This field displays the CPQ summary variable Count of products on the Quote Line Items with the product code = GM</inlineHelpText>
        <label>GM Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_all_consult_type__c</fullName>
        <description>Full by process builder.</description>
        <inlineHelpText>Concatenate the GM consult type</inlineHelpText>
        <label>GM all consult type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GM_non_Included_Count1__c</fullName>
        <description>(Total GM - GM included) Full by price rule calculation</description>
        <inlineHelpText>(Total GM - GM included) Full by price rule calculation</inlineHelpText>
        <label>GM non-Included Count1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_non_Included_Count__c</fullName>
        <formula>GM_Product_Count__c -  GM_Included_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM non-Included Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HHS_Discharges__c</fullName>
        <formula>TEXT( SBQQ__Opportunity2__r.HHS_Discharges__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HHS Discharges</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHS_EBITDA__c</fullName>
        <formula>TEXT(SBQQ__Opportunity2__r.HHS_EBITDA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HHS EBITDA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHS_Employees__c</fullName>
        <formula>TEXT( SBQQ__Opportunity2__r.HHS_Employees__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HHS Employees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHS_Outpatient_Visits__c</fullName>
        <formula>TEXT( SBQQ__Opportunity2__r.HHS_Outpatient_Visits__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HHS Outpatient Visits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHS_Staffed_Bed_Size__c</fullName>
        <formula>TEXT(SBQQ__Opportunity2__r.HHS_Staffed_Bed_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HHS Staffed Bed Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHS_Total_Revenue__c</fullName>
        <formula>TEXT( SBQQ__Opportunity2__r.HHS_Total_Revenue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HHS Total Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HY_Included_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field displays the CPQ summary variable Count of HY Included which counts products with the combined product code and type = HY Included</description>
        <inlineHelpText>This field displays the CPQ summary variable Count of HY Included which counts products with the combined product code and type = HY Included</inlineHelpText>
        <label>HY Included Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HY_Prod_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field displays the CPQ summary variable Count of products on the Quote Line Items with the product code = HY</description>
        <inlineHelpText>This field displays the CPQ summary variable Count of products on the Quote Line Items with the product code = HY</inlineHelpText>
        <label>HY Prod Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HY_Product_Count__c</fullName>
        <description>This is a roll-up count of HealthiestYou line items in Quote Line Items. Used for Octiv proposals.</description>
        <inlineHelpText>This is a roll-up count of HealthiestYou line items in Quote Line Items. Used for Octiv proposals.</inlineHelpText>
        <label>HY Product Count</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.HY_Product_Included_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HY_Standard_Count__c</fullName>
        <label>HY Standard Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>